<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:background="@drawable/back_land"
    tools:context=".splash.ui.SplashActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="@dimen/toolbar_elevation"
        android:theme="@style/AppTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:contentInsetStart="0dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/back_button"
                android:src="@drawable/ic_back"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:paddingLeft="@dimen/large_margin"
                android:paddingStart="@dimen/large_margin"
                android:paddingEnd="@dimen/large_margin"
                android:paddingRight="@dimen/large_margin"
                android:drawablePadding="@dimen/large_margin"
                android:tint="@color/colorPrimary"
                android:layout_alignParentBottom="true"
                android:layout_alignParentTop="true" />

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_edittext_layout"
            android:layout_width="match_parent"
            android:textColorHint="@color/selected_text_color"
            app:hintTextAppearance="@style/HintTextStyle"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_weight="1"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:textColor="@color/selected_text_color"
                android:textColorHighlight="@color/selected_text_color"
                android:textColorHint="@color/selected_text_color"
                android:textColorLink="@color/selected_text_color"
                app:theme="@style/EditTextStyle" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/nextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_design"
            android:text="ĎALEJ"
            android:textColor="@android:color/white" />
    </LinearLayout>


</RelativeLayout>

