...
    <string name="fontToolbar">fonts/Roboto-Medium.ttf</string>
    <string name="action_example">action_1</string>
    <string name="title_activity_dashboard">The run 2018</string>

    <string name="exception_message_generic">No connection</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="openDrawer">open_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_1">Run 2018</string>
    <string name="nav_2">Mapa</string>
    <string name="nav_3">CHECK IN</string>
    <string name="nav_4">Poradie 2017</string>

    <string-array name="nav_item_activity_titles">
        <item>Run 2018</item>
        <item>Mapa</item>
...
