...
                android:textColorHint="@color/selected_text_color"
                android:textColorLink="@color/selected_text_color"
                app:theme="@style/EditTextStyle" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_design"
            android:text="PRIHLÁSIŤ SA"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>


